--- a/twitter_scraper.ipynb
+++ b/twitter_scraper.ipynb
@@ -44,7 +44,9 @@
     "        attributes_container.append([tweet.user.username,tweet.date, tweet.likeCount, tweet.quoteCount, tweet.renderedContent])\n",
     "    \n",
     "# Create a dataframe from the tweets list above \n",
-    "tweets_df = pd.DataFrame(attributes_container, columns=[\"Username\", \"DateCreated\", \"NumberOfLikes\", \"NumberOfUsersQuotedTweet\", \"TweetRendered\"])"
+    "tweets_df = pd.DataFrame(attributes_container, columns=[
+    "    \"Username\", \"DateCreated\", \"NumberOfLikes\", \"NumberOfUsersQuotedTweet\", \"TweetRendered\"
+    "                                                       ])"
    ]
   },
   {
